Add endpoint that returns a nullable response for all variable types
